arm bucket fix, fans empowering chain, better mixin conditions, fix creative cake