@@ -1,10 +1,7 @@
 package zeh.createlowheated.mixin;
 
 import com.simibubi.create.content.processing.burner.BlazeBurnerBlock.HeatLevel;
-import org.spongepowered.asm.mixin.Final;
-import org.spongepowered.asm.mixin.Mixin;
-import org.spongepowered.asm.mixin.Mutable;
-import org.spongepowered.asm.mixin.Shadow;
+import org.spongepowered.asm.mixin.*;
 import org.spongepowered.asm.mixin.gen.Invoker;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
@@ -16,11 +13,13 @@ import java.util.Locale;
 
 @Mixin(value = HeatLevel.class, remap = false)
 public abstract class HeatLevelMixin {
+
     @Shadow
     @Final
     @Mutable
     private static HeatLevel[] $VALUES;
 
+    @Unique
     private static final HeatLevel LOW = heatExpansion$addVariant("LOW");
 
     @Invoker("<init>")
@@ -28,33 +27,27 @@ public abstract class HeatLevelMixin {
         throw new AssertionError();
     }
 
+    @Unique
     private static HeatLevel heatExpansion$addVariant(String internalName) {
         ArrayList<HeatLevel> variants = new ArrayList<>(Arrays.asList(HeatLevelMixin.$VALUES));
-        HeatLevel heat = heatExpansion$invokeInit(internalName, variants.get(variants.size() - 1).ordinal() + 1);
+        HeatLevel heat = heatExpansion$invokeInit(internalName, variants.getLast().ordinal() + 1);
         variants.add(heat);
         HeatLevelMixin.$VALUES = variants.toArray(new HeatLevel[0]);
         return heat;
     }
 
-    //Since only nextActiveLevel used this no mixin is used
-    /*
-    @Inject(method = "byIndex", at = @At("RETURN"))
-    private static void byIndex(int index, CallbackInfoReturnable<HeatLevel> cir) {
-    }
-     */
-
     @Inject(method = "nextActiveLevel", at = @At("RETURN"), cancellable = true)
     public void nextActiveLevel(CallbackInfoReturnable<HeatLevel> cir) {
-        if (this.getSerializedName().equals("NONE".toLowerCase(Locale.ROOT))) {
-            cir.setReturnValue(HeatLevelMixin.LOW);
+        if (this.equals(HeatLevel.NONE)) {
+            cir.setReturnValue(LOW);
             return;
         }
-        if (this.getSerializedName().equals("LOW".toLowerCase(Locale.ROOT))) {
+        if (this.equals(LOW)) {
             cir.setReturnValue(HeatLevel.SMOULDERING);
             return;
         }
-        if (this.getSerializedName().equals("SEETHING".toLowerCase(Locale.ROOT))) {
-            cir.setReturnValue(HeatLevelMixin.LOW); //Next ACTIVE HeatLevel
+        if (this.equals(HeatLevel.SEETHING)) {
+            cir.setReturnValue(LOW);
         }
     }
 
@@ -64,7 +57,7 @@ public abstract class HeatLevelMixin {
             cir.setReturnValue(true);
             return;
         }
-        if (heatLevel.equals(HeatLevelMixin.LOW)) {
+        if (heatLevel.equals(LOW)) {
             if (this.equals(HeatLevel.NONE)) {
                 cir.setReturnValue(false);
             } else {
@@ -72,16 +65,9 @@ public abstract class HeatLevelMixin {
             }
             return;
         }
-        if (this.equals(HeatLevelMixin.LOW)) {
-            if (heatLevel.equals(HeatLevelMixin.LOW /*|| heatLevel.equals(HeatLevel.NONE)*/ )) {
-                cir.setReturnValue(true);
-            } else {
-                cir.setReturnValue(false);
-            }
+        if (this.equals(LOW)) {
+            cir.setReturnValue(heatLevel.equals(LOW));
         }
     }
-
-    @Shadow
-    public abstract String getSerializedName();
 
 }
